// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with loader 1`] = `
.c0 {
  width: 100%;
  max-width: 123px;
  height: 55px;
}

.c1 {
  width: 100%;
  height: 55px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  padding: 0 15px;
  border-radius: 4px;
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c1:hover {
  background-color: #EC7E00;
}

<div
  class="c0"
>
  <button
    class="c1"
    type="button"
  >
    <img
      alt="loader"
      src="light_loader.svg"
    />
  </button>
</div>
`;

exports[`should render with text 1`] = `
.c0 {
  width: 100%;
  max-width: 123px;
  height: 55px;
}

.c1 {
  width: 100%;
  height: 55px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  padding: 0 15px;
  border-radius: 4px;
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c1:hover {
  background-color: #EC7E00;
}

<div
  class="c0"
>
  <button
    class="c1"
    type="button"
  >
    Search
  </button>
</div>
`;
